--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=:Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Animaciones</title>
-    <link rel="stylesheet" href="estilos/estilos.css">
+    <link rel="stylesheet" href="estilos.css">
 
 </head>
 <body>
@@ -28,7 +28,7 @@
         
     </label>
     <article class="card">
-        <img src="imagenes/spiderman.jpg" alt="card__img">
+        <img src="spiderman.jpg" alt="card__img">
         <div class="card__text">
             <h3 class="card__title"> ¡Soy Spiderman!</h3>
             <p class="card__paragraph">Spider-man, traducido en ocasiones como el Hombre Araña, es un superheroe ficticio creado por los estadounidenses Stan Lee y Steve Ditko,
